Update Title in navbar.

--- a/index.html
+++ b/index.html
@@ -35,39 +35,43 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-2 col-md-2">
-                    <div class="header__logo">
-                        <a href="./index.html"><!--<img src="img/logo.png" alt="">-->LVF Music</a>
-                    </div>
+                    <ul>
+                        <li> 
+                            <div class="header__logo">
+                                <a href="./index.html"><!--<img src="img/logo.png" alt="">-->LVF Music</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-lg-10 col-md-10">
-                    <div class="header__nav">
-                        <nav class="header__menu mobile-menu">
-                            <ul>
-                                <li class="active"><a href="./index.html">Home</a></li>
-                                <li><a href="./about.html">About</a></li>
-                                <li><a href="./discography.html">Discography</a></li>
-                                <li><a href="./tours.html">Tours</a></li>
-                                <li><a href="./videos.html">Videos</a></li>
-                                <li><a href="#">Pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="./about.html">About</a></li>
-                                        <li><a href="./blog.html">Blog</a></li>
-                                        <li><a href="./blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="./contact.html">Contact</a></li>
-                            </ul>
-                        </nav>
-                        <div class="header__right__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </div>
+            </div>
+            <div class="col-lg-10 col-md-10">
+                <div class="header__nav">
+                    <nav class="header__menu mobile-menu">
+                        <ul>
+                            <li class="active"><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./discography.html">Discography</a></li>
+                            <li><a href="./tours.html">Tours</a></li>
+                            <li><a href="./videos.html">Videos</a></li>
+                            <li><a href="#">Pages</a>
+                                <ul class="dropdown">
+                                    <li><a href="./about.html">About</a></li>
+                                    <li><a href="./blog.html">Blog</a></li>
+                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="./contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                    <div class="header__right__social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
                     </div>
                 </div>
             </div>
-            <div id="mobile-menu-wrap"></div>
+        </div>
+        <div id="mobile-menu-wrap"></div>
         </div>
     </header>
     <!-- Header Section End -->
@@ -82,7 +86,8 @@
                         <h1>Feel the heart beats</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <br />tempor
                             incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="https://www.youtube.com/watch?v=K4DyBUG242c" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+                        <a href="https://www.youtube.com/watch?v=K4DyBUG242c" class="play-btn video-popup"><i
+                                class="fa fa-play"></i></a>
                     </div>
                 </div>
             </div>
@@ -195,7 +200,8 @@
             <div class="row">
                 <div class="col-lg-6 p-0">
                     <div class="services__left set-bg" data-setbg="img/services/service-left.jpg">
-                        <a href="https://www.youtube.com/watch?v=JGwWNGJdvx8" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+                        <a href="https://www.youtube.com/watch?v=JGwWNGJdvx8" class="play-btn video-popup"><i
+                                class="fa fa-play"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 p-0">
@@ -280,8 +286,7 @@
                                     </div>
                                     <!-- Volume Controls -->
                                     <div class="jp-volume-controls">
-                                        <button class="jp-mute" tabindex="0"><i
-                                                class="fa fa-volume-down"></i></button>
+                                        <button class="jp-mute" tabindex="0"><i class="fa fa-volume-down"></i></button>
                                         <div class="jp-volume-bar">
                                             <div class="jp-volume-bar-value" style="width: 0%;"></div>
                                         </div>
@@ -315,8 +320,7 @@
                                     </div>
                                     <!-- Volume Controls -->
                                     <div class="jp-volume-controls">
-                                        <button class="jp-mute" tabindex="0"><i
-                                                class="fa fa-volume-down"></i></button>
+                                        <button class="jp-mute" tabindex="0"><i class="fa fa-volume-down"></i></button>
                                         <div class="jp-volume-bar">
                                             <div class="jp-volume-bar-value" style="width: 0%;"></div>
                                         </div>
@@ -350,8 +354,7 @@
                                     </div>
                                     <!-- Volume Controls -->
                                     <div class="jp-volume-controls">
-                                        <button class="jp-mute" tabindex="0"><i
-                                                class="fa fa-volume-down"></i></button>
+                                        <button class="jp-mute" tabindex="0"><i class="fa fa-volume-down"></i></button>
                                         <div class="jp-volume-bar">
                                             <div class="jp-volume-bar-value" style="width: 0%;"></div>
                                         </div>
@@ -385,8 +388,7 @@
                                     </div>
                                     <!-- Volume Controls -->
                                     <div class="jp-volume-controls">
-                                        <button class="jp-mute" tabindex="0"><i
-                                                class="fa fa-volume-down"></i></button>
+                                        <button class="jp-mute" tabindex="0"><i class="fa fa-volume-down"></i></button>
                                         <div class="jp-volume-bar">
                                             <div class="jp-volume-bar-value" style="width: 0%;"></div>
                                         </div>
@@ -420,8 +422,7 @@
                                     </div>
                                     <!-- Volume Controls -->
                                     <div class="jp-volume-controls">
-                                        <button class="jp-mute" tabindex="0"><i
-                                                class="fa fa-volume-down"></i></button>
+                                        <button class="jp-mute" tabindex="0"><i class="fa fa-volume-down"></i></button>
                                         <div class="jp-volume-bar">
                                             <div class="jp-volume-bar-value" style="width: 0%;"></div>
                                         </div>
@@ -455,8 +456,7 @@
                                     </div>
                                     <!-- Volume Controls -->
                                     <div class="jp-volume-controls">
-                                        <button class="jp-mute" tabindex="0"><i
-                                                class="fa fa-volume-down"></i></button>
+                                        <button class="jp-mute" tabindex="0"><i class="fa fa-volume-down"></i></button>
                                         <div class="jp-volume-bar">
                                             <div class="jp-volume-bar-value" style="width: 0%;"></div>
                                         </div>
@@ -491,7 +491,8 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="youtube__item">
                         <div class="youtube__item__pic set-bg" data-setbg="img/youtube/youtube-1.jpg">
-                            <a href="https://www.youtube.com/watch?v=yJg-Y5byMMw?autoplay=1" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+                            <a href="https://www.youtube.com/watch?v=yJg-Y5byMMw?autoplay=1"
+                                class="play-btn video-popup"><i class="fa fa-play"></i></a>
                         </div>
                         <div class="youtube__item__text">
                             <h4>David Guetta Miami Ultra Music Festival 2019</h4>
@@ -501,7 +502,8 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="youtube__item">
                         <div class="youtube__item__pic set-bg" data-setbg="img/youtube/youtube-2.jpg">
-                            <a href="https://www.youtube.com/watch?v=K4DyBUG242c?autoplay=1" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+                            <a href="https://www.youtube.com/watch?v=K4DyBUG242c?autoplay=1"
+                                class="play-btn video-popup"><i class="fa fa-play"></i></a>
                         </div>
                         <div class="youtube__item__text">
                             <h4>Martin Garrix (Full live-set) | SLAM!Koningsdag</h4>
@@ -511,7 +513,8 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="youtube__item">
                         <div class="youtube__item__pic set-bg" data-setbg="img/youtube/youtube-3.jpg">
-                            <a href="https://www.youtube.com/watch?v=S19UcWdOA-I?autoplay=1" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+                            <a href="https://www.youtube.com/watch?v=S19UcWdOA-I?autoplay=1"
+                                class="play-btn video-popup"><i class="fa fa-play"></i></a>
                         </div>
                         <div class="youtube__item__text">
                             <h4>Dimitri Vegas, Steve Aoki & Like Mike’s “3 Are Legend”</h4>
@@ -601,10 +604,14 @@
                 </div>
             </div>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			<div class="footer__copyright__text">
-				<p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
-			</div>
-			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            <div class="footer__copyright__text">
+                <p>Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
+                    made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                        target="_blank">Colorlib</a>
+                </p>
+            </div>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </div>
     </footer>
     <!-- Footer Section End -->
